--- a/app/pug/modules/footer.pug
+++ b/app/pug/modules/footer.pug
@@ -1,5 +1,21 @@
+.payments
+	a(href="#")
+		img(src="./icons/maestro.svg" alt="")
+	a(href="#")
+		img(src="./icons/mastercard.svg" alt="")
+	a(href="#")
+		img(src="./icons/o.svg" alt="")
+	a(href="#")
+		img(src="./icons/spotify.svg" alt="")
+	a(href="#")
+		img(src="./icons/switch.svg" alt="")
+	a(href="#")
+		img(src="./icons/visa.svg" alt="")
+	a(href="#")
+		img(src="./icons/western-union.svg" alt="")
+
 nav.navBottom
-	- var menuBottom = ["Home", "Terms of use", "Responsible gaming", "Contact us"];
+	- var menuBottom = ["Affiliates", "Contact us", "Live Chat", "Responsible Gaming", "Register"];
 	ul.menuBottom
 		for menuBottom__item in menuBottom
 			li.menuBottom__item
