--- a/app/pug/modules/head.pug
+++ b/app/pug/modules/head.pug
@@ -4,6 +4,6 @@ meta(name="description" content="")
 meta(http-equiv="X-UA-Compatible" content="IE=edge")
 meta(name="viewport" content="width=device-width, initial-scale=1.0")
 link(rel="shortcut icon" href="./img/fav.ico")
-link(rel="stylesheet" href="../libs/slick/slick.css")
-link(rel="stylesheet" href="../libs/slick/slick-theme.css")
+link(rel="stylesheet" href="libs/slick/slick.css")
+link(rel="stylesheet" href="libs/slick/slick-theme.css")
 link(rel="stylesheet" href="css/style.css")
