--- a/app/pug/modules/scripts.pug
+++ b/app/pug/modules/scripts.pug
@@ -1,3 +1,3 @@
 script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
-script(src="../libs/slick/slick.min.js")
+script(src="libs/slick/slick.min.js")
 script(src="js/common.js")
