--- a/app/sass/components/_common.scss
+++ b/app/sass/components/_common.scss
@@ -94,7 +94,7 @@ header {
 .language--selected {
 	display: block;
 	width: 36px;
-	height: 16px;
+	height: 24px;
 	margin-right: 1em;
 
 	img {
@@ -106,9 +106,9 @@ header {
 		font-family: 'myicons';
 		position: absolute;
 		right: -0.5em;
-		top: -0.2em;
+		top: -0.1em;
 		color: $color-1;
-		font-size: 2em;
+		font-size: 1.5em;
 	}
 }
 
@@ -200,38 +200,51 @@ header {
 /*----------------------------------------------------------------------------------------
 |                              FOOTER START                                               |
 -----------------------------------------------------------------------------------------*/
-// footer {
-// 	display: flex;
-// 	flex-direction: row-reverse;
-// 	alin-items: center;
-// 	justify-content: space-between;
-// 	padding: 16px 10px;
-// 	margin-top: 10px;
-// 	background-color: rgba(0, 0, 0, 0.2);
-// 	color: $color-4;
-// 	font-size: 1.2em;
-// }
+footer {
+	padding: 1.5em;
+	margin-top: 1.5em;
+	@include bg-carbon;
+	color: $color-4;
+	text-align: center;
+}
 
-// .copyright {}
+.copyright {
+	font-size: 0.8em;
+}
 
-// .menuBottom {
-// 	padding-left: 0;
-// 	margin: 0;
-// }
+.menuBottom {
+	padding-left: 0;
+	margin: 1.5em 0;
+}
 
-// .menuBottom__item {
-// 	display: inline-block;
+.menuBottom__item {
+	display: inline-block;
 	
-// 	a {
-// 		padding: 0 5px;
-// 		text-decoration: underline;
-// 		color: $color-4;
+	a {
+		padding: 0 5px;
+		text-decoration: underline;
+		color: $color-4;
 
-// 		&:hover {
-// 			text-decoration: none;
-// 		}
-// 	}
-// }
+		&:hover {
+			text-decoration: none;
+		}
+	}
+}
+
+.payments {
+	display: flex;
+	justify-content: center;
+
+	 a {
+	 	display: block;
+	 	width: 6em;
+	 	margin: 0.5em 1.5em;
+
+	 	img {
+	 		width: 100%;
+	 	}
+	 }
+}
 /*----------------------------------------------------------------------------------------
 |                              FOOTER END                                                 |
 -----------------------------------------------------------------------------------------*/
@@ -337,6 +350,10 @@ header {
 		margin-right: 0;
 	}
 
+	// &:nth-child(-n+2) {
+	// 	margin-bottom: 0;
+	// }
+
 	h3 {
 		color: $color-1;
 		text-shadow: 1px 1px 3px $color-2;
@@ -363,7 +380,6 @@ header {
 		height: 100%;
 		@include bg-block-gradient;
 		pointer-events: none;
-		// z-index: 2;
 	}
 
 	&:hover {
@@ -378,7 +394,6 @@ header {
 }
 
 .right {
-	border: 1px solid red;
 	flex: 0 0 25%;
 }
 
@@ -421,7 +436,26 @@ header {
 }
 
 .game-slider {
-	padding: 3em 0;
+	padding: 2.5em 0;
+
+	.slick-prev, .slick-next {
+		top: 3%;
+		z-index: 50;
+		left: 42%;
+		transform: rotateX(180deg);
+	}
+
+	.slick-next {
+		top: 94%;
+		transform: rotateX(0deg);
+	}
+
+	.slick-prev:before, .slick-next:before {
+		content: $icon-arrow_d;
+		font-family: 'myicons';
+		font-size: 50px;
+		opacity: 1;		
+	}
 }
 
 .game-slider__item {
@@ -444,107 +478,103 @@ header {
 	margin-top: 0.3em;
 }
 
+.info {
+	margin-top: 1.5em;
+	padding: 1.5em;
+	@include bg-carbon;
+	display: flex;
+	justify-content: space-around;
+}
 
-// .content__descr {
-// 	border: 10px solid rgba(255, 255, 255, 0.6);
-// 	background-color: $color-4;
-// 	padding: 10px;
+.info__box {
+	width: 30%;
+	padding: 1em 3em;
+	background-color: rgba(0,79,146,0.5);
+	@include multiple-border;
+}
 
-// 	h1 {
-// 		color: $color-1;
-// 	}
+.info-box__title {
+	text-transform: uppercase;
+	color: $color-1;
+	opacity: 0.8;	
+	font-weight: 600;
+	letter-spacing: 2px;
+	text-shadow: 1px 1px 3px $color-2;
+}
 
-// 	hr {
-// 		background-color: $color-2;
-// 		box-shadow: 0px 1px 0.5px 0px rgba(255, 255, 255, 0.75);
-// 		height: 0.5px;
-//     	border: none;
-// 	}
+.info-box__list-item {
+	width: 100%;
 
-// 	.text {
-// 		font-size: 1em;
-// 		text-indent: 30px;
-// 		color: $color-1;
-// 		line-height: 1.6em;
-// 	}
-// }
+	a {
+		display: block;
+		padding: 0.5em 0;
+		color: $color-1;
+		opacity: 0.8;
+		transition: 0.3s;
+		text-shadow: 1px 1px 3px $color-2;
 
-// .info {
-// 	padding: 10px;
-// 	min-width: 30%;
-// 	border: 10px solid rgba(255, 255, 255, 0.4);
-// 	background-color: $color-4;
-// 	color: $color-1;
-// }
+		&:hover {
+			padding-left: 0.4em;
+			opacity: 1;
+			transition: 0.3s;
+		}
+	}
+}
 
-// .accordion {
-// 	background-color: $color-2;
-// }
+.info-box__list {
+	padding-left: 0;
+}
 
-// .accordion__title {	
-// 	position: relative;
-// 	padding: 12px 10px;
-// 	border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-// 	cursor: pointer;
+.info-box__schedule {
+	padding-left: 0;
 
-// 	&:before {
-// 		content: '';
-// 		position: absolute;
-// 		right: 0.5em;
-// 		top: calc(50% - 3px);
-//     	transform: rotate(-90deg);
-// 		width: 0;
-// 		height: 0;
-// 		border-style: solid;
-// 		border-width: 4px 3px 0 3px;
-// 		border-color: #fff transparent transparent transparent;
-// 	}
+	li {
+		display: flex;
+		color: $color-1;
+		opacity: 0.8;
+		margin-bottom: 1em;
+	}
+}
 
-// 	span {
-// 		display: none;
-// 	}
+.schedule-data {
+	font-size: 0.8em;
+	margin-right: 2em;
+}
 
-// 	&.open {
-// 		border-bottom: none;
+.schedule-link {
+	color: $color-1;
+	opacity: 0.8;
+	transition: 0.3s;
+	text-shadow: 1px 1px 3px $color-2;
 
-// 		&:before {
-// 			transform: rotate(0deg);
-// 		}
-	
-// 		span:last-child {
-// 			display: inline;
-// 		}
-// 	}
+	&:hover {
+		opacity: 1;
+		text-decoration: underline;
+	}
+}
 
-// 	&.close {
-// 		span:first-child {
-// 			display: inline;
-// 		}
-// 	}
-// }
+.info-box__news {
+	display: flex;
+	align-items: center;
+	margin-top: 1em;
 
-// .accordion__body {
-// 	position: relative;
-// 	padding: 0px;
-// 	max-height: 0;            
-//     overflow: hidden;
-//     transition: max-height 0.5s ease-in-out, overflow 0.5s ease-in-out, padding 0.5s ease-in-out;
-// 	line-height: 1.6em;
-// 	// border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-// }
+	.img-wpr {
+		display: block;
+		width: 40%;
+		margin-right: 0.5em;
+		opacity: 1;
 
-// .slide-up, .slide-down {
-//     max-height: 0;            
-//     overflow-y: hidden;
-//     transition: max-height 0.5s ease-in-out;
-// }
+		img {
+			width: 100%;
+		}
+	}
 
-// .accordion__body--show {            
-//     max-height: 10em;
-//     padding: 10px;
-//     line-height: 1.6em;
-// 	border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-// }
+	.info-box__news-link  {
+		color: $color-1;
+		font-size: 0.8em;
+	}
+}
+
 /*----------------------------------------------------------------------------------------
 |                              CONTENT SECTION END                                        |
 -----------------------------------------------------------------------------------------*/
@@ -565,135 +595,9 @@ header {
 
 // 992
 @include MQ(M) {
-	.content-wrp {
-		padding: 10px 40px;
-	}
+
 }
 
-@media only screen and (max-width: 850px) {
-	header {
-	    flex-direction: row;
-	    // height: 6em;
-	}
-
-	.main-nav {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 10em;
-		background-color: $color-1;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		transform: translateY(-100%);
-		transition: 0.3s;
-		z-index: 20;
-	}
-
-	// .menu {
-	// 	width: 100%;
-	// 	min-height: 10em;
-	// 	display: flex;
-	// 	justify-content: center;
-	// 	align-items: center;
-	// }
-
-	.menu__item {
-		background-color: $color-1;
-		height: auto;		
-		padding: 0.5em 2.5em;
-		color: $color-2;
-		text-transform: uppercase;
-
-		&:hover {
-			color: $color-1;
-		}
-
-		&:last-child:before {
-			border-color: #000 transparent transparent transparent;
-		}
-	}
-
-	.submenu {
-	    position: relative;
-	}
-
-	.submenu__item a {
-		color: $color-1;
-	}
-
- 	.mob-menu-trigger {
- 		display: block;
- 		height: 4px;
-		width: 2.5em;
-		background-color: $color-2;
-		margin-bottom: 10px;
-
-		&:before,
-		&:after {
-			content: '';
-			display: block;
-			position: absolute;
-			background-color: $color-2;
-			height: 4px;
-			width: 2.5em;
-			margin-top: 8px;
-		}
-
-		&:after {
-			margin-top: -8px;
-		}
- 	}
-
-	.mob-menu-close {
-		display: block;
-		position: absolute;
-		top: 1.5em;
-		right: 1.5em;
-		width: 2em;
-		height: 2em;
-		vertical-align: middle;
-		z-index: 20;
-	}
-
-	.mob-menu-close span:before,
-	.mob-menu-close span:after {
-		content: '';
-		display: block;
-		position: absolute;
-		background-color: $color-2;
-		height: 4px;
-		width: 2.5em;
-		transform: rotate(-45deg);
-		transition: -webkit-transform 0.3s ease-out;
-		transition: transform 0.3s ease-out;
-		transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
-	}
-
-	.mob-menu-close span:after {
-		transform: rotate(45deg);
-	}
-
-	.mob-menu-close:hover span:before,
-	.mob-menu-close:hover span:after {
-		transform: rotate(0deg);
-	}
-
-	.main-nav--mob-open {
-		transform: translateY(0%);
-		transition: 0.3s;
-	}
-
-	footer {
-	    display: block;
-	    text-align: center;
-	}
-
-	.navBottom {
-	    margin-bottom: 1em;
-	}
-} 
 
 // 768
 @include MQ(SM) {
