chenged path for logo img

--- a/app/pug/modules/header.pug
+++ b/app/pug/modules/header.pug
@@ -1,6 +1,6 @@
 .logo
 	a(href="#")
-		img(src="../img/logo.png" alt="")
+		img(src="./img/logo.png" alt="")
 
 nav.main-nav
 	a(href="#" class="menu__item") Sports
